--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,10 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <app-root style="margin: 0; top: 0; right: 0; left: 0; bottom: 0; z-index: 3001;">
+    <p style="position: absolute; top: 23%; left: 33%; color: #ed2553;">
+      <img src="assets/images/ObeseIncredibleFlea-max-1mb.gif"><br>
+  </p>
+  </app-root>
 </body>
 </html>
